design refactor finished
